--- a/quotes.html
+++ b/quotes.html
@@ -52,11 +52,11 @@
             </div>
         </div>
     </div>
-    <div class="copyright">
-        <p>copyright c made with BHALI-DEVELOPER</p>
-    </div>
+    
    </section>
-
+   <!-- <div class="copyright">
+    <p>copyright c made with BHALI-DEVELOPER</p>
+</div> -->
 
    <script>
    var quotes = [
